WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52506
REGRESSION (
r71842
): Compass video is not playing in Safari welcome page
https://bugs.webkit.org/show_bug.cgi?id=52506
Summary
REGRESSION (r71842): Compass video is not playing in Safari welcome page
Jer Noble
Reported
2011-01-14 21:21:41 PST
The various elements of the welcome page animate, but the compass animates as a still image. The video of the compass needle spinning is not playing.
Attachments
Patch
(5.26 KB, patch)
2011-01-14 22:45 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(5.12 KB, patch)
2011-01-19 16:03 PST
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2011-01-14 21:22:13 PST
<
rdar://problem/8864215
>
Jer Noble
Comment 2
2011-01-14 22:45:21 PST
Created
attachment 79055
[details]
Patch
Eric Carlson
Comment 3
2011-01-17 08:54:25 PST
+ waitForEvent('seeked', + function () { + testExpected("video.currentTime.toFixed(2)", (video.duration - 0.2).toFixed(2)); + Including the duration of a media file in test results will make the test fail in a port that use another encoding. Look at video-seek-past-end-paused.html for one way to do this kind of test without logging the actual duration.
Jer Noble
Comment 4
2011-01-19 16:03:31 PST
Created
attachment 79511
[details]
Patch Thanks for the r+, Mitz. I'm uploading a new patch anyway, though, to address Eric's comment
Jer Noble
Comment 5
2011-01-20 15:15:59 PST
Comment on
attachment 79511
[details]
Patch Clearing commit+ in preparation of manual landing.
Jer Noble
Comment 6
2011-01-20 15:45:25 PST
Committed
r76296
: <
http://trac.webkit.org/changeset/76296
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug