2011-01-14  Jer Noble  <jer.noble@apple.com>

Reviewed by Eric Carlson.

        REGRESSION (r71842): Compass video is not playing in Safari welcome page
        https://bugs.webkit.org/show_bug.cgi?id=52506

        Test that a delay between loading and playing video does not break playback.

        * media/video-currentTime-delay-expected.txt: Added.
        * media/video-currentTime-delay.html: Added.
2011-01-14  Jer Noble  <jer.noble@apple.com>

        Reviewed by Eric Carlson.

        REGRESSION (r71842): Compass video is not playing in Safari welcome page
        https://bugs.webkit.org/show_bug.cgi?id=52506

        New test: LayoutTests/media/video-currentTime-delay.html

        Call invalidateCachedTime() every time one of the cached property dependencies changes,
        i.e. m_paused and m_playbackRate.

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::prepareForLoad):
        (WebCore::HTMLMediaElement::setReadyState):
        (WebCore::HTMLMediaElement::setPlaybackRate):
        (WebCore::HTMLMediaElement::mediaPlayerRateChanged):

Canonical link: https://commits.webkit.org/66534@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76296 268f45cc-cd09-0410-ab3c-d52691b4dbfc